chore: additional tests